Enhance README with setup and feature detailsI
Expanded README.md to include detailed setup instructions, features, folder structure, sample output, and CSV format example.